Corrected behaviour when clicking on save button, updated CSS with scroll when notepad gets overflow

--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ body{
   display: inline-block;
   border: none;
   min-width: 50px;
-  max-width: 200px;
+  width: 100%;
   padding: 0.8rem 0;
 }
 
@@ -142,7 +142,10 @@ body{
   display: inline-block;
   border: none;
   min-width: 50px;
+  width: 100%;
   max-width: 100%;
+  height: 80vh;
+  overflow: auto;
 }
 
 .textarea-content[contenteditable]:empty::before {
